# scCBGM

./: .#README.md  .#main.py  .flake8  .gitignore  .pre-commit-config.yaml  README.md  baseline_biolord.py  baseline_cinemaot.py  biolord.py  biolord_baseline.py  clean.sh  env.yaml  env.yml  exp.py  main.py  pyproject.toml  requirements.in  scBenchmark.md  scCBMFM.py  sweeper.py
conceptlab/: __init__.py
data/: hbca_immune.h5ad  kang.h5ad
datagen/: _base.py  omics.py  plot.py
fm_config/: general.yaml
guides/: reproduce.md
hydra_config/: config.yaml
jobs/: benchmark_liver_pcluster.sh  init_sweep.sh  lsf_sweep.sh  pcluster_sweep.sh  sweeper.py  sweeper_pcluster.py
notebooks/: 2024-07-26-cbm-datagen-tutorial-001.ipynb  2024-08-09-eval-example.ipynb  2024-08-15-eval-example.ipynb
old_notebooks/: immune_dictionary_benchmark_coarse_gd_IL17.ipynb  immune_dictionary_benchmark_coarse_pDC_IL15.ipynb  kang_zero_shot_cb_fm_CD4.ipynb  kang_zero_shot_cb_fm_dendritic.ipynb  kang_zero_shot_cb_fm_dendritic_naive_CD4.ipynb  kang_zero_shot_cb_fm_memt.ipynb  kang_zero_shot_cb_fm_treg.ipynb
results/: cb_vae_independent_incomplete_set.csv
scripts/: benchmark_liver.py  benchmark_liver_baselines.py  benchmark_scdata.py  generate_synthetic_data.py  generate_synthetic_data.py.bak  get_cell_cell_sweep.py  get_hparam_sweep_results.py  get_kang_results.py  get_performance_sweep_results.py
sweeps/: _dev.yaml  sweep_demo.yaml  sweep_robustness.yaml  sweep_test.yaml
synth_hydra_config/: config.yaml
testing/: 2024-08-14-vae_test.py  plotting_mu_var.py  plotting_omics_vs_modeled.py  (+2 more)
(+509 files in other folders)
