[tool.poetry]
name = "conceptlab"
version = "0.1.0"
description = ""
authors = ["Alma Andersson", "Aya Ismail"]
readme = "README.md"
packages = [
    { include = "conceptlab" }
    ]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
